--- a/about.css
+++ b/about.css
@@ -8,7 +8,7 @@
     margin: 0;
     font-size: 350%;
     font-weight: 510;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Merriweather', serif;
     padding-block-start: 10%;
     padding-left: 5%;
     text-align: left;
@@ -24,7 +24,7 @@
     padding-right: 7%;
     padding-top: 5%;
     padding-bottom: 5%;
-    color: rgb(66, 63, 63);
+    color:#8f8f8f;
 }
 
 .aboutPar2 {
@@ -35,7 +35,7 @@
     padding-left: 7%;
     padding-right: 7%;
     padding-bottom: 5%;
-    color: rgb(66, 63, 63);
+    color: #8f8f8f;
 }
 
 .banner2 {
@@ -50,10 +50,10 @@
     margin: 0;
     font-size: 300%;
     font-weight: 510;
-    font-family:'Courier New', Courier, monospace;
+    font-family: 'Merriweather', serif;
     padding-block-start: 10%;
     padding: 10%;
     text-align: center;
     color:rgb(8, 38, 66);
-    word-spacing: 70px; 
+    word-spacing: 10px; 
 }
