--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
-body {
+html, body {
+	height: 100%;
 	margin: 0;
 	padding: 0;
 }
 
 .nav {
-	height: 80px;
+	height: 60px;
 	display: flex;
 	flex-flow: row-reverse wrap;
 }
@@ -20,6 +21,11 @@ body {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+	text-decoration: none;
+}
+
+.nav_link:hover {
+	text-decoration: underline;
 }
 
 .nav_div * {
@@ -29,15 +35,10 @@ body {
 }
 
 .nav a * {
-	font-family: 'Bitter', serif;
+	font-family: 'Merriweather', serif;
 	color: white;
-	text-transform: uppercase;
+	text-transform: capitalize;
 }
-
-div a:first-child:hover {
-
-}
-
 
 
 
