--- a/donate.css
+++ b/donate.css
@@ -1,8 +1,11 @@
+.buffer {
+	height: 120px;
+}
+
 .donate_div {
 	border-style: solid;
 	border-width: 1px;
 	border-radius: 20px;
-	margin-top: 50px;
 	margin-right: 15%;
 	margin-left: 15%;
 	margin-bottom: 100px;
@@ -13,10 +16,13 @@
 	text-align: center;
 	text-transform: capitalize;
 	font-size: 50px;
+	margin: 0;
+	margin-top: 20px;
+	margin-bottom: 40px;
 }
 
 .title_line {
-	margin-bottom: 20px;
+	margin-bottom: 40px;
 }
 
 .amount_options {
@@ -31,5 +37,65 @@
 
 .amount_options label {
 	text-align: left;
+	margin-bottom: 40px;
+	font-size: 30px;
+	display: flex;
+	align-items: center;
 }
+
+.amount_options label:last-child {
+	width: 100%;
+	display: flex;
+	justify-content: flex-start;
+}
+
+.amount_options label:last-child {
+	width: 100%;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+}
+
+.radio_custom {
+	width: 5%;
+}
+
+.custom_amount {
+	font-size: 20px;
+	border-radius: 5px;
+}
+
+.title2 {
+	font-size: 30px;
+}
+
+.payment_info_A {
+	display: flex;
+	flex-direction: row;
+}
+
+.one_, .two_ {
+	width: 50%;
+	margin: 10px;
+	padding: 10px;
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 10px;
+}
+
+.one_ * {
+	padding: 10px;
+}
+
+.billing1 {
+	width: 92%;
+}
+
+
+
+
+
+
+
+
 
