--- a/donate.css
+++ b/donate.css
@@ -1,15 +1,23 @@
+body {
+	background-image: url('image2.jpg');
+	background-position: right-top;
+	background-attachment: fixed;
+}
+
 .buffer {
 	height: 120px;
 }
 
 .donate_div {
 	border-style: solid;
-	border-width: 1px;
+	border-width: 2px;
+	border-color: #cf0000;
 	border-radius: 20px;
 	margin-right: 15%;
 	margin-left: 15%;
 	margin-bottom: 100px;
 	padding: 30px;
+	background-color: white;
 }
 
 .donate_title {
@@ -41,6 +49,7 @@
 	font-size: 30px;
 	display: flex;
 	align-items: center;
+	font-family: 'Ubuntu', sans-serif;
 }
 
 .amount_options label:last-child {
@@ -66,7 +75,9 @@
 }
 
 .title2 {
-	font-size: 30px;
+	font-size: 24px;
+	font-family: 'Ubuntu', sans-serif;
+	font-weight: lighter;
 }
 
 .payment_info_A {
@@ -79,8 +90,11 @@
 	margin: 10px;
 	padding: 10px;
 	border-style: solid;
-	border-width: 1px;
+	border-width: 0px;
 	border-radius: 10px;
+	font-size: 20px;
+	font-family: 'Ubuntu', sans-serif;
+	font-weight: lighter;
 }
 
 .one_ * {
@@ -91,6 +105,55 @@
 	width: 92%;
 }
 
+.month_year, .security_code {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.two_ > input {
+	width: 95%;
+}
+
+.two_A {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+
+.month_year_A {
+	display: flex;
+	flex-direction: row;
+}
+
+.two_ input {
+	padding: 10px;
+}
+
+.terms_conditions {
+	font-family: 'Ubuntu', sans-serif;
+	font-weight: lighter;
+}
+
+.terms_conditions input {
+	height: 20px;
+}
+
+.submit_btn {
+	height: 40px;
+	width: 100%;
+	margin-top: 20px;
+	border-radius: 0 0 10px 10px;
+	font-size: 20px;
+	font-family: 'Ubuntu', sans-serif;
+	background-color: #cf0000;
+}
+
+hr {
+	border-width: 0;
+	height: 2px;
+	background-color: #cf0000;
+}
 
 
 
