--- a/donate.css
+++ b/donate.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url('image2.jpg');
+	background-image: url('https://images.unsplash.com/photo-1492434136719-f5f284776beb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80');
 	background-position: right-top;
 	background-attachment: fixed;
 }
@@ -50,6 +50,7 @@ body {
 	display: flex;
 	align-items: center;
 	font-family: 'Ubuntu', sans-serif;
+	color: grey;
 }
 
 .amount_options label:last-child {
@@ -67,9 +68,11 @@ body {
 
 .radio_custom {
 	width: 5%;
+	font-family: 'Ubuntu', sans-serif;
 }
 
 .custom_amount {
+	padding: 10px;
 	font-size: 20px;
 	border-radius: 5px;
 }
@@ -140,12 +143,14 @@ body {
 }
 
 .submit_btn {
-	height: 40px;
+	height: 70px;
 	width: 100%;
 	margin-top: 20px;
 	border-radius: 0 0 10px 10px;
 	font-size: 20px;
 	font-family: 'Ubuntu', sans-serif;
+	color: white;
+	text-transform: uppercase;
 	background-color: #cf0000;
 }
 
