--- a/donate.css
+++ b/donate.css
@@ -18,6 +18,7 @@ body {
 	margin-bottom: 100px;
 	padding: 30px;
 	background-color: white;
+	box-shadow: 0px 0px 116px -1px rgba(0,0,0,0.76);
 }
 
 .donate_title {
