--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ html, body {
 .nav {
 	height: 60px;
 	display: flex;
-	flex-flow: row-reverse wrap;
+	flex-flow: row-reverse;
 	position: fixed;
 	width: 100%;
 	box-shadow: 0px 0px 20px black;
@@ -34,17 +34,40 @@ html, body {
 	text-decoration: underline;
 }
 
+.nav_partners {
+	display: flex;
+	width: 25%;
+	flex-direction: column;
+	align-items: center;
+	background-color: white;
+}
+
+.nav_partners p {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	font-family: 'Ubuntu', sans-serif;
+	font-size: 24px;
+	font-weight: lighter;
+	text-transform: uppercase;
+	height: 60px !important;
+	display: flex;
+	align-items: center;
+}
+
 .nav_div {
+	width: 100%;
 	font-size: 18px;
-	text-align: center;
 	display: flex;
 	flex-direction: column;
-	padding-bottom: 10px;
 	border-radius: 0 0 0 10px;
+	margin-top: 20px;
 	display: none;
 }
 
-.nav_div a {
+.nav_div p {
+	padding: 0;
+	margin: 0 !important;
+	width: 100%;
 	font-family: 'Ubuntu', sans-serif;
 	font-weight: lighter;
 	color: black;
@@ -60,8 +83,33 @@ html, body {
 }
 
 .nav_partners:hover .nav_div {
-	display: flex;
+	padding-left: 20px;
+	border-width: 0 0 2px 2px;
+	border-style: solid;
+	border-color: red;
+	display: block;
 }
+
+.nav_div a:hover {
+	text-decoration: underline;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
